<resources>
    <string name="app_name">BasketBall</string>
    <string name="action_settings">Settings</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="watch_log">比赛录入</string>
    <string name="watch_info">比赛数据</string>
    <string name="change_pw">修改密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign">签到</string>
    <string name="menu">菜单</string>
    <string name="ting">停</string>
    <string name="fangui">犯规</string>
    <string name="zanting">暂停</string>
    <string name="huan">换</string>
    <string name="watch_start">比赛开始</string>
    <string name="first_ball_player">首发球员</string>
    <string name="change_area">场地交换</string>
    <string name="some_one_give_up">一方弃权</string>
    <string name="watch_failed">比赛作废</string>
    <string name="ensure_start_watch">请确认是否结束比赛准备阶段\n正式开始比赛?</string>
    <string name="chang_clothes_num">球衣修改</string>
    <string name="go_to_court">上场</string>
    <string name="back">返回</string>
    <string name="is_change_area">是否交换双方的场地？</string>
    <string name="cancellation">比赛作废确认</string>
    <string name="check_palyer">请选择球员</string>
</resources>
