<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/left_margin"
    android:paddingRight="@dimen/left_margin"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.huizetime.basketball.widget.MultiClothesView
            android:id="@+id/team_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:orientation="vertical"
            app:imgHeight="@dimen/height_clothes_real"
            app:imgWidth="@dimen/width_clothes"
            app:numSize="40px" />

        <com.huizetime.basketball.widget.MultiClothesView
            android:id="@+id/team_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:orientation="vertical"
            app:clothesType="2"
            app:imgHeight="@dimen/height_clothes_real"
            app:imgWidth="@dimen/width_clothes"
            app:numSize="40px" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/top_margin_button_first_fragment"
        android:orientation="horizontal">

        <TextView
            android:clickable="true"
            android:onClick="onClick"
            android:id="@+id/watch_start"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button_first_fragment"
            android:layout_marginRight="@dimen/right_margin_button_first_fragment"
            android:layout_weight="1"
            android:background="@drawable/bg_button_fragment"
            android:gravity="center"
            android:text="@string/watch_start"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button_first_fragment" />

        <TextView
            android:clickable="true"
            android:onClick="onClick"
            android:id="@+id/first_players"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button_first_fragment"
            android:layout_marginRight="@dimen/right_margin_button_first_fragment"
            android:layout_weight="1"
            android:background="@drawable/bg_button_fragment"
            android:gravity="center"
            android:text="@string/first_ball_player"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button_first_fragment" />

        <TextView
            android:clickable="true"
            android:onClick="onClick"
            android:id="@+id/change_area"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button_first_fragment"
            android:layout_weight="1"
            android:background="@drawable/bg_button_fragment"
            android:gravity="center"
            android:text="@string/change_area"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button_first_fragment" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/top_margin_button_2_first_fragment"
        android:orientation="horizontal">

        <TextView
            android:clickable="true"
            android:onClick="onClick"
            android:id="@+id/give_up"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button_first_fragment"
            android:layout_marginRight="@dimen/right_margin_button_first_fragment"
            android:layout_weight="1"
            android:background="@drawable/bg_button_fragment"
            android:gravity="center"
            android:text="@string/some_one_give_up"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button_first_fragment" />

        <TextView
            android:clickable="true"
            android:onClick="onClick"
            android:id="@+id/cancellation"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button_first_fragment"
            android:layout_marginRight="@dimen/right_margin_button_first_fragment"
            android:layout_weight="1"
            android:background="@drawable/bg_button_fragment"
            android:gravity="center"
            android:text="@string/watch_failed"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button_first_fragment" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button_first_fragment"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
